--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^3.2.0",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
+    "sass-loader": "^6.0.6",
     "react-svg-loader": "^3.0.3",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
